feat: 新增开场诗
